--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -7,6 +7,7 @@
     "inlineSources": false,
     "target": "es6",
     "module": "es6",
+    "moduleResolution": "node",
     "outDir": ".ts"
   },
   "filesGlob": [
