--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "tsconfig-glob": "^0.4.1",
     "tsdm": "0.1.0-3",
     "tslint": "^3.5.0",
-    "typescript": "^1.8.2",
+    "typescript": "^1.9.0-dev.20160227",
     "webpack": "^1.12.2",
     "webpack-dev-server": "^1.12.1"
   },
