--- a/package.json
+++ b/package.json
@@ -73,7 +73,9 @@
     "react-router": "^2.0.0",
     "recompose": "^0.15.0",
     "redux": "^3.3.1",
+    "redux-debounced": "^0.1.1",
     "redux-decorated": "^0.1.3",
+    "redux-thunk": "^1.0.3",
     "zenscroll": "^3.0.1"
   }
 }
