--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "react-redux": "^4.4.0",
     "react-router": "^2.0.0",
     "recompose": "^0.15.0",
+    "redbox-react": "^1.2.2",
     "redux": "^3.3.1",
     "redux-debounced": "^0.1.1",
     "redux-decorated": "^0.1.3",
